corpo feito - adc base

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8"> <!-- Aceita caracteres especiais (^ ~ ´) -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsivo -->
 		<title>dev.finance$</title>
+
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
+		<header>
+			<h1 id="logo">dev.finance$</h1>
+		</header>
 		
+		<main>
+			<section id="balance"></section>
+			<section id="transaction"></section>
+		</main>
+
+		<footer><p>dev.finance$</p></footer>
+
+		<script src="./scripts.js"></script>
 	</body>
 </html>
