--- a/index.html
+++ b/index.html
@@ -90,6 +90,61 @@
 			</section>
 		</main>
 		
+		<div class="modal-overlay active">
+			<div class="modal">
+				<div id="form">
+					<h2>Nova Transação</h2>
+					<form action="">
+						<div class="input-group">
+							<label 
+								class="sr-only"
+								for="description">Descrição
+							</label>
+							<input 
+								type="text" 
+								id="description" 
+								name="description"
+								placeholder="Descrição"
+							/>
+						</div>				
+						
+						<div class="input-group">
+							<label 
+								class="sr-only"
+								for="amount">Valor
+							</label>
+							<input 
+								type="number" 
+								step="0.01"
+								id="description" 
+								name="description"
+								placeholder="0,00"
+							/>
+							<small>Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais.</small>	
+						</div>
+
+						<div class="input-group">
+							<label 
+								class="sr-only"
+								for="date">Data
+							</label>
+							<input 
+								type="date" 
+								id="date" 
+								name="date"
+								placeholder="01/01/2021"
+							/>
+						</div>
+
+						<div class="input-group actions">
+							<a href="#" class="button cancel">Cancelar</a>
+							<button>Salvar</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
 		<footer><p>dev.finance$</p></footer>
 
 		<script src="./scripts.js"></script>
