--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
 			<section id="transaction">
 				<h2 class="sr-only">Transações</h2>
-				<a href="#" class="button new">+ Nova transação</a>
+				<a href="#"
+					onclick="Modal.open()"
+					class="button new">+ Nova transação</a>
 
 				<table id="data-table">
 					<thead>
@@ -90,7 +92,7 @@
 			</section>
 		</main>
 		
-		<div class="modal-overlay active">
+		<div class="modal-overlay">
 			<div class="modal">
 				<div id="form">
 					<h2>Nova Transação</h2>
@@ -137,7 +139,9 @@
 						</div>
 
 						<div class="input-group actions">
-							<a href="#" class="button cancel">Cancelar</a>
+							<a href="#"
+								onclick="Modal.close()" 
+								class="button cancel">Cancelar</a>
 							<button>Salvar</button>
 						</div>
 					</form>
